# python-o2-conversion

./: README.md  o2conversion.py  pyproject.toml
.github/workflows/: run_pytests.yml
tests/: test_conversion.py
